<resources>
    <string name="app_name">Xiu</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint">搜索或输入地址</string>
    <string name="add_tab">打开新标签页</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_holder">设置</string>
    <string name="search_in">搜索·Xiu</string>
    <string name="customize_text_size">自定义网页字体大小</string>
    <string name="cannot_set_text_auto">因为自定义了字体大小，无法自适应</string>
    <string name="dia_bookmark_radio">添加到首页</string>
    <string name="dia_bookmark_url">地址：</string>
    <string name="dia_bookmark_title">名称：</string>
    <string name="dia_add_bookmark_title">添加书签</string>
    <string name="edit_bookmark_title">编辑书签</string>
    <string name="dia_add_bookmark_success">添加成功</string>
    <string name="dia_add_bookmark_exist">书签已存在</string>
    <string name="dir_exist">文件夹已存在</string>
    <string name="remove_bookmark_confirm">书签已存在，确认移除书签吗？</string>
    <string name="confirm">确定</string>
    <string name="open">打开</string>
    <string name="ignore">忽略</string>
    <string name="refuse">拒绝</string>
    <string name="close">关闭</string>
    <string name="cancel">取消</string>
    <string name="copy">复制到剪切板</string>
    <string name="reload">刷新</string>
    <string name="bookmark">书签</string>
    <string name="history">历史</string>
    <string name="desktop">桌面模式</string>
    <string name="desktop_opened">已开启桌面模式</string>
    <string name="desktop_closed">已关闭桌面模式</string>
    <string name="forward">前进</string>
    <string name="Baidu">百度</string>
    <string name="Google">谷歌</string>
    <string name="Bing">必应</string>
    <string name="Sougou">搜狗</string>
    <string name="s360">360搜索</string>
    <string name="Wuzhui">无追搜索</string>
    <string name="Yandex">Yandex</string>
    <string name="Shenma">神马</string>
    <string name="AI360">360 AI</string>
    <string name="MetaAI">秘塔 AI</string>
    <string name="PhindAI">Phind AI</string>
    <string name="AISearch">AI Search</string>
    <string name="EngineTips">在%s上搜索</string>
    <string name="connection_secure">连接安全</string>
    <string name="connection_not_secure">连接不安全</string>
    <string name="clear_cookies_and_site_data">清除Cookie和网站数据</string>
    <string name="privacy_and_service_agreement">隐私与用户协议</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="delete">删除</string>
    <string name="add_to_homepage">添加到主页</string>
    <string name="add_to_bookmark">添加到书签</string>
    <string name="open_by_new_tab">在新标签页中打开</string>
    <string name="other_opening_methods">其他打开方式</string>
    <string name="url_not_found">找不到链接</string>
    <string name="donating">捐助</string>
    <string name="result_qr">扫描结果</string>
    <string name="dialog_shortcut_title">确定从主页上删除?</string>
    <string name="dialog_bookmark_title">确定删除书签?</string>
    <string name="dialog_history_title">确定删除历史?</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="searching">搜索</string>
    <string name="common">常规</string>
    <string name="extensions">扩展程序</string>
    <string name="advanced">高级</string>
    <string name="AutomaticFontSize">自适应字体大小</string>
    <string name="DynamicColors">主题颜色自适应</string>
    <string name="dynamicColors_open">已开启主题颜色跟随壁纸自适应，重启软件生效</string>
    <string name="dynamicColors_close">已关闭主题颜色跟随壁纸自适应，重启软件生效</string>
    <string name="dynamicColors_not_support">当前设备不支持主题颜色跟随壁纸自适应</string>
    <string name="ForceUserScalable">强制手势缩放</string>
    <string name="private_safety">隐私&amp;安全</string>
    <string name="https_only">Https-Only</string>
    <string name="Cookie">减少Cookie横幅</string>
    <string name="tracking_protecting">增强型跟踪保护</string>
    <string name="web_permission">网站权限</string>
    <string name="about">关于</string>
    <string name="about_stage">关于Xiu</string>
    <string name="per_tabs">tabs</string>
    <string name="per_bookmarks">bookmarks</string>
    <string name="per_browserSettings">browserSettings</string>
    <string name="per_browsingData">browsingData</string>
    <string name="per_downloads">downloads</string>
    <string name="per_downloadsopen">downloads.open</string>
    <string name="per_find">find</string>
    <string name="per_geolocation">geolocation</string>
    <string name="per_history">history</string>
    <string name="per_management">management</string>
    <string name="per_nativeMessaging">nativeMessaging</string>
    <string name="per_notifications">notifications</string>
    <string name="per_pkcs11">pkcs11</string>
    <string name="per_privacy">privacy</string>
    <string name="per_proxy">proxy</string>
    <string name="per_sessions">sessions</string>
    <string name="per_topSites">topSites</string>
    <string name="per_webNavigation">webNavigation</string>
    <string name="per_clipboardWrite">clipboardWrite</string>
    <string name="per_clipboardRead">clipboardRead</string>
    <string name="per_bookmarks_cn">读取或修改书签</string>
    <string name="per_browserSettings_cn">读取或修改浏览器设置</string>
    <string name="per_browsingData_cn">清除最近的浏览历史、cookie 和相关数据</string>
    <string name="per_downloads_cn">下载文件和读取并修改浏览器的下载记录</string>
    <string name="per_downloadsopen_cn">打开下载到本地的文件</string>
    <string name="per_find_cn">读取所有打开标签的内容</string>
    <string name="per_geolocation_cn">获取您的地理位置</string>
    <string name="per_history_cn">获取浏览历史</string>
    <string name="per_management_cn">监控扩展使用和管理主题</string>
    <string name="per_nativeMessaging_cn">与 Firefox 以外的程序交换消息</string>
    <string name="per_notifications_cn">显示通知</string>
    <string name="per_pkcs11_cn">提供密码认证服务</string>
    <string name="per_privacy_cn">读取和修改隐私设置</string>
    <string name="per_proxy_cn">控制浏览器代理设置</string>
    <string name="per_sessions_cn">访问最近关闭的标签</string>
    <string name="per_tabs_cn">访问浏览器选项卡</string>
    <string name="per_topSites_cn">访问浏览历史</string>
    <string name="per_webNavigation_cn">在使用时访问浏览器活动</string>
    <string name="per_clipboardWrite_cn">向剪贴板写入数据</string>
    <string name="per_clipboardRead_cn">从剪贴板获取数据</string>
    <string name="settings">设置</string>
    <string name="download">下载</string>
    <string name="addons">扩展程序</string>
    <string name="baidu">https://www.baidu.com/s?wd=</string>
    <string name="google">https://www.google.com/search?q=</string>
    <string name="bing">https://cn.bing.com/search?q=</string>
    <string name="sogou">https://www.sogou.com/web?query=</string>
    <string name="sk360">https://www.so.com/s?ie=utf-8&amp;fr=none&amp;ssid=&amp;q=</string>
    <string name="wuzhui">https://www.wuzhuiso.com/s?ie=utf-8&amp;fr=none&amp;q=</string>
    <string name="yandex">https://yandex.com/search/?text=</string>
    <string name="shenma">https://m.sm.cn/s?q=</string>
    <string name="ai360">https://www.sou.com/?q=</string>
    <string name="metaai">https://metaso.cn/?q=</string>
    <string name="phindai">https://phind-ai.com/zh/search?q=</string>
    <string name="aisearch">https://isou.chat/search?q=</string>
    <string name="diySearching">自定义搜索引擎</string>
    <string name="diyAddress">自定义搜索地址</string>
    <string name="homePageUrl">自定义主页地址</string>
    <string name="homePageUrlSummary">可输入http/https地址</string>
    <string name="edit_diy_warnning">请务必输入正确</string>
    <string name="addons_menu_add">添加扩展程序</string>
    <string name="add_addons_from_firefox">从Firefox官方商店获取</string>
    <string name="add_addons_from_local">从本地安装</string>
    <string name="add_addons_from_edge">从Edge商店安装</string>
    <string name="add_addons_from_other">从第三方市场安装</string>
    <string name="author">作者:</string>
    <string name="version">版本:</string>
    <string name="description">描述:</string>
    <string name="pair_instructions_message">识别二维码</string>
    <string name="intent_message">网页希望打开本地应用</string>
    <string name="details">详情</string>
    <string name="no_addons">还没有扩展程序，快去添加吧。</string>
    <string name="private_mode">无痕模式</string>
    <string name="private_mode_opened">已开启无痕模式</string>
    <string name="private_mode_closed">已关闭无痕模式</string>
    <string name="local_files">文件管理</string>
    <string name="ExtensionProcess">扩展程序独立进程</string>
    <string name="before_unload_prompt_title">离开页面？</string>
    <string name="before_unload_prompt_message">此页面想询问您是否要离开， 您输入的数据可能不会被保存。</string>
    <string name="request_storage">允许访问设备存储吗？ ("%1$s")</string>
    <string name="request_storage_access">允许第三方访问第一方存储吗？ "%1$s"?</string>
    <string name="request_geolocation">允许"%1$s"读取位置信息吗?</string>
    <string name="request_notification">允许"%1$s"发送通知吗?</string>
    <string name="request_video">与"%1$s"分享视频</string>
    <string name="request_audio">与"%1$s"分享音频</string>
    <string name="request_media">与"%1$s"分享视频和音频</string>
    <string name="request_xr">Share WebXR displays with "%1$s"?</string>
    <string name="request_autoplay">允许在"%1$s"自动播放视频？</string>
    <string name="request_media_key_system_access">允许在"%1$s"使用系统媒体按键</string>
    <string name="media_back_camera">后置摄像头</string>
    <string name="media_front_camera">前置摄像头</string>
    <string name="media_microphone">麦克风</string>
    <string name="media_other">未知资源</string>
    <string name="crashed_title">APP Crashed</string>
    <string name="crashed_text">报告给Mozilla.</string>
    <string name="crashed_ignore">忽略</string>
    <string name="crashed_report">Report</string>
    <string name="dev_mode">开发调试</string>
    <string name="tools">工具箱</string>
    <string name="float_video">悬浮嗅探</string>
    <string name="about_config">内核参数定制</string>
    <string name="float_video_message">当前%1$s悬浮视频嗅探功能，开启后软件会自动嗅探检索网页中的视频资源悬浮播放，支持流畅播放、投屏等加强功能</string>
    <string name="float_video_opened">已开启</string>
    <string name="float_video_closed">未开启</string>
    <string name="domain_config">网络日志</string>
    <string name="permission_request">授权</string>
    <string name="location_permission">位置权限</string>
    <string name="location_permission_allow_all">一律允许</string>
    <string name="location_permission_deny_all">一律拒绝</string>
    <string name="location_permission_prompt">询问</string>
    <string name="check_update">检查更新</string>
    <string name="about_new_version">新版本</string>
    <string name="new_version_url" translatable="false">https://haikuo.lanzouj.com/b0ekkjzi</string>
    <string name="download_request">网页希望下载文件</string>
    <string name="download_finished">%1$s下载完成</string>
    <string name="notify">温馨提示</string>
    <string name="type_all">全部</string>
    <string name="type_video">视频</string>
    <string name="type_audio">音频</string>
    <string name="type_image">图片</string>
    <string name="type_other">其它</string>
    <string name="browse">访问链接</string>
    <string name="float_play">悬浮播放</string>
    <string name="copy_url">复制链接</string>
    <string name="custom_copy">自由复制</string>
    <string name="import_bookmark">从HTML导入</string>
    <string name="export_bookmark">导出为HTML</string>
    <string name="create_dir">创建文件夹</string>
    <string name="rename_dir">重命名文件夹</string>
    <string name="choose_dir">选择文件夹</string>
    <string name="cannot_be_empty">不能为空</string>
    <string name="edit">编辑</string>
    <string name="update_success">更新成功</string>
</resources>