<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:checkedButton="@+id/radio_button_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Baidu" />

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Google" />

        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Bing" />

        <RadioButton
            android:id="@+id/radio_button_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Sougou" />

        <RadioButton
            android:id="@+id/radio_button_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/s360" />

        <RadioButton
            android:id="@+id/radio_button_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Wuzhui" />

        <RadioButton
            android:id="@+id/radio_button_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Yandex" />

        <RadioButton
            android:id="@+id/radio_button_9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Shenma" />

        <RadioButton
            android:id="@+id/radio_button_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/diySearching" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>